apps/php-apache/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  backend:
    serviceName: svc
    servicePort: 80
